// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <ul
      class="sc-kIKDeO sc-dsQDmV zlfFv dwBQur sc-cZwWEu QrmZN"
    >
      <li>
        <div
          class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
        >
          You can put 
          <a
            class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
        >
          Multiline text
          <div
            class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <ol
      class="sc-kIKDeO sc-hNKHps zlfFv eCLmQY sc-cZwWEu QrmZN"
    >
      <li>
        <div
          class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
        >
          You can put 
          <a
            class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
        >
          Multiline text
          <div
            class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
